# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,8 @@ import authRouter from "./auth";
 import listingsRouter from "./listings";
 import messagesRouter from "./messages";
 import usersRouter from "./users";
+import adminRouter from "./admin";
+import storageRouter from "./storage";
 
 const router: IRouter = Router();
 
@@ -12,5 +14,7 @@ router.use(authRouter);
 router.use(listingsRouter);
 router.use(messagesRouter);
 router.use(usersRouter);
+router.use(adminRouter);
+router.use(storageRouter);
 
 export default router;
